# gst-plugin-snapshot

./: AUTHORS  ChangeLog  EclipseSymbolsAndIncludePaths.xml  Makefile  README.md  configure.ac  ignore.txt
src/: .cproject  .project  Makefile  Makefile.am  gstsnapshotfilter.c  gstsnapshotfilter.h  ldd_output.txt
